# RayTracer

./: .clangd  CMakeLists.txt  README.md  main.cc
include/geometry/: matrix.hh  point.hh  vector.hh
include/image/: color.hh  image.hh
include/light/: light.hh  point_light.hh
include/logger/: logger.hh
include/motor/: motor.hh
include/object/: cube.hh  object.hh  plane.hh  sphere.hh  triangle.hh
include/scene/: blob.hh  camera.hh  object.hh  plane.hh  point_light.hh  scene.hh  sphere.hh  triangle.hh  uniform_texture.hh
include/texture/: texture_material.hh  uniform_texture.hh
src/: CMakeLists.txt
src/geometry/: CMakeLists.txt  matrix.cc  point.cc  vector.cc
src/image/: CMakeLists.txt  color.cc  image.cc
src/light/: CMakeLists.txt  point_light.cc
src/logger/: CMakeLists.txt  logger.cc
src/motor/: CMakeLists.txt  motor.cc
src/object/: CMakeLists.txt  cube.cc  object.cc  plane.cc  sphere.cc  triangle.cc
src/scene/: CMakeLists.txt  blob.cc  camera.cc  object.cc  plane.cc  point_light.cc  scene.cc  sphere.cc  texture_material.cc  triangle.cc  uniform_texture.cc
src/texture/: CMakeLists.txt  texture_material.cc  uniform_texture.cc
